# eduSpec-3-II

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: lint-format-python.yml  run-tests.yml
data/: navigation.json  nmr.jdx
data/checkers/: CustomIntegerChecker.py  customintchecker.py
data/molecules/: 7732-18-5-2d.mol
data/navigation/: ir_sidebar.json  navigation.json  nmr_sidebar.json  pages.json  topnavbar.json
data/questions/: bu_kacinci_deneme.json  bu_kacinci_deneme2.json  combo_draw_butanol.json  combo_unknown_a_ir.json  combo_unknown_a_mcq.json  deneme.json  eee.json  fcbc.json  gsgds.json  gsgdsg.json  id31.json  ididi.json  idididdi.json  ir_broad_oh_mcq.json  ir_c_o_range.json  mcqdeneme.json  (+21 more)
editor/: CreateForms.py  editor.py
questions/: int.json  question1.json  question2.json  question3.json  question4.json  selam.json  word.json
src/: AnswerChecker.py  Checker.py  CustomThemes.py  IntegerQuestion.py  MoleculeDisplay.py  MoleculeDrawer.py  MoleculeDrawingQuestion.py  MoleculeQuestion.py  MultipleChoiceQuestion.py  Question.py  QuestionBuilder.py  QuestionDrawer.py  QuestionManager.py  QuestionSerialiser.py  Quiz.py  QuizBuilder.py  QuizManager.py  SpectralQuestion.py  WordQuestion.py  __init__.py  answers.csv  demoMoleculeDrawing.py  demoSpectralParsing.py  editornavigation.py  jsme_component.py  main.py  mainMoleculeDrawer.py  mymain.py  navigation.py  pages.py  quizbuilder_trying.py  spectral_test.py  spectral_trying.py
(+130 files in other folders)
